--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -11,3 +11,29 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+
+  authentication-services:
+    build:
+      context: ./../authentication-service
+      dockerfile: ./../authentication-service/Dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_URL: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+
+  postgres:
+    image: "postgres:14.2"
+    deploy:
+      mode: replicated
+      replicas: 1
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: users
+    volumes:
+      - ./db-data/postgres/:/var/lib/postgresql/data/
