--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -25,6 +25,21 @@ services:
     environment:
       DATABASE_URL: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
 
+  logger-services:
+    build:
+      context: ./../logger-service
+      dockerfile: ./../logger-service/Dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    depends_on:
+      - mongo
+    environment:
+      MONGO_URI: mongodb://mongo:27017
+      MONGO_USERNAME: admin
+      MONGO_PASSWORD: password
+
   postgres:
     image: "postgres:14.2"
     deploy:
@@ -37,3 +52,16 @@ services:
       POSTGRES_DB: users
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
+
+  mongo:
+    image: "mongo:4.2.16-bionic"
+    deploy:
+      mode: replicated
+      replicas: 1
+    restart: always
+    environment:
+      MONGO_INITDB_DATABASE: logs
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - ./db-data/mongo/:/data/db
